Added security - local variables for db access

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,9 +36,9 @@ play.i18n.langs = [ "en" ]
 # db.default.password=""
 
 db.default.driver= org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5433/postgres"
-db.default.user="postgres"
-db.default.pass="photos)(oot"
+db.default.url=${PHOTO_SESH_DB_JDBC}
+db.default.user=${PHOTO_SESH_DB_USER}
+db.default.pass=${PHOTO_SESH_DB_PASS}
 
 db.default.jndiName=DefaultDS
 jpa.default=defaultPersistenceUnit
