More critiria work

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,8 +37,8 @@ play.i18n.langs = [ "en" ]
 
 db.default.driver= org.postgresql.Driver
 db.default.url=${PHOTO_SESH_DB_JDBC}
-db.default.user=${PHOTO_SESH_DB_USER}
-db.default.pass=${PHOTO_SESH_DB_PASS}
+db.default.username=${PHOTO_SESH_DB_USER}
+db.default.password=${PHOTO_SESH_DB_PASS}
 
 db.default.jndiName=DefaultDS
 jpa.default=defaultPersistenceUnit
