--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ activator.bat
 activator-launch-1.3.5.jar
 README
 set-local-vars.sh
+PhotoSesh.iml
+scala-play-2
+activator-launch-1.3.6
+activator-launch-1.3.6.jar
