State machine - in progress

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,6 +39,8 @@ db.default.driver= org.postgresql.Driver
 db.default.url=${PHOTO_SESH_DB_JDBC}
 db.default.username=${PHOTO_SESH_DB_USER}
 db.default.password=${PHOTO_SESH_DB_PASS}
+db.default.dbname=${PHOTO_SESH_DB_NAME}
+db.default.testdb=${PHOTO_SESH_TEST_DB}
 
 db.default.jndiName=DefaultDS
 jpa.default=defaultPersistenceUnit
